code review round 3 fixes chang font file and adjust spacing, fix header line, add long text hidding sub round 4 code review

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -16,6 +16,8 @@
 }
 
 .card__title {
+  margin-top: 25px;
+  margin-bottom: 25px;
   width: 219px;
   max-width: 219px;
   background-color: #fff;
@@ -25,12 +27,8 @@
   color: black;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 900;
-}
-
-.card__image-heart {
-  width: 21px;
-  height: 18px;
-  align-self: center;
+  font-size: 24px;
+  line-height: 1.2;
 }
 
 .card__heart-button {
