--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,6 +15,7 @@
   grid-area: info-wrapper;
   align-self: center;
   padding-left: 30px;
+  position: relative;
 }
 
 .profile__image {
@@ -35,6 +36,9 @@
   font-weight: 500;
   line-height: 1.14;
   grid-area: name;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -42,8 +46,10 @@
   height: 24px;
   width: 24px;
   border: 1px solid #fff;
+  border-radius: 2px;
   transition: ease-in-out 0.1s;
-  margin-bottom: 10px;
+  position: relative;
+  bottom: 10px;
   margin-left: 18px;
   cursor: pointer;
 }
@@ -58,6 +64,10 @@
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: 400;
+  line-height: 1.2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button {
@@ -76,7 +86,7 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 745px) {
+@media screen and (max-width: 770px) {
   .profile__add-button {
     width: 75px;
   }
@@ -97,7 +107,7 @@
   }
 }
 
-@media screen and (max-width: 546px) {
+@media screen and (max-width: 560px) {
   .profile {
     margin: 0;
     padding: 0;
@@ -126,13 +136,13 @@
     padding: 0;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 46px;
+    margin-bottom: 36px;
     margin-top: 4px;
   }
 
   .profile__add-button {
-    height: 50px;
     width: 282px;
-
+    margin-left: auto;
+    margin-right: auto;
   }
 }
